fixed side bar with market data, truncated vals to 2 decimals, added differentiation between ETFs and individual companies, need to refactor for less verbosity/code complexity

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,49 +8,48 @@
 }
 
 :root {
-  --background: 248 77% 95%;
-  --foreground: 248 5% 3%;
-  --card: 248 50% 90%;
-  --card-foreground: 248 5% 10%;
-  --popover: 248 77% 95%;
-  --popover-foreground: 248 95% 3%;
-  --primary: 248 88% 58%;
+  --background: 145 81% 95%;
+  --foreground: 145 5% 4%;
+  --card: 145 50% 90%;
+  --card-foreground: 145 5% 10%;
+  --popover: 145 81% 95%;
+  --popover-foreground: 145 95% 4%;
+  --primary: 145 65% 41%;
   --primary-foreground: 0 0% 100%;
-  --secondary: 248 30% 70%;
+  --secondary: 145 30% 70%;
   --secondary-foreground: 0 0% 0%;
-  --muted: 210 30% 85%;
-  --muted-foreground: 248 5% 35%;
-  --accent: 210 30% 80%;
-  --accent-foreground: 248 5% 10%;
-  --destructive: 0 77% 30%;
-  --destructive-foreground: 248 5% 90%;
-  --border: 248 30% 50%;
-  --input: 248 30% 18%;
-  --ring: 248 88% 58%;
+  --muted: 107 30% 85%;
+  --muted-foreground: 145 5% 35%;
+  --accent: 107 30% 80%;
+  --accent-foreground: 145 5% 10%;
+  --destructive: 0 81% 30%;
+  --destructive-foreground: 145 5% 90%;
+  --border: 145 30% 50%;
+  --input: 145 30% 18%;
+  --ring: 145 65% 41%;
   --radius: 0.5rem;
 }
-
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: 248 50% 5%;
-    --foreground: 248 5% 90%;
-    --card: 248 50% 3%;
-    --card-foreground: 248 5% 90%;
-    --popover: 248 50% 5%;
-    --popover-foreground: 248 5% 90%;
-    --primary: 248 88% 58%;
+    --background: 145 50% 5%;
+    --foreground: 145 5% 90%;
+    --card: 145 50% 4%;
+    --card-foreground: 145 5% 90%;
+    --popover: 145 50% 5%;
+    --popover-foreground: 145 5% 90%;
+    --primary: 145 65% 41%;
     --primary-foreground: 0 0% 100%;
-    --secondary: 248 30% 10%;
+    --secondary: 145 30% 10%;
     --secondary-foreground: 0 0% 100%;
-    --muted: 210 30% 15%;
-    --muted-foreground: 248 5% 60%;
-    --accent: 210 30% 15%;
-    --accent-foreground: 248 5% 90%;
-    --destructive: 0 77% 30%;
-    --destructive-foreground: 248 5% 90%;
-    --border: 248 30% 18%;
-    --input: 248 30% 18%;
-    --ring: 248 88% 58%;
+    --muted: 107 30% 15%;
+    --muted-foreground: 145 5% 60%;
+    --accent: 107 30% 15%;
+    --accent-foreground: 145 5% 90%;
+    --destructive: 0 81% 30%;
+    --destructive-foreground: 145 5% 90%;
+    --border: 145 30% 18%;
+    --input: 145 30% 18%;
+    --ring: 145 65% 41%;
     --radius: 0.5rem;
   }
   html {
